<resources>
    <string name="app_name">Week_4_Task</string>
    <string name="good_morning">Good Morning!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="people">People</string>
    <string name="notificationCount">1</string>
    <string name="notification_icon">notification icon</string>
    <string name="hearts_image">hearts image</string>
    <string name="search_for_celebrants">Search for celebrants...</string>
    <string name="gifts">Gifts</string>
    <string name="people_fragment">People Fragment</string>
    <string name="gifts_fragment">Gifts Fragment</string>
</resources>