<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/greetTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center_vertical"
                    android:text="@string/good_morning"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/hearts"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/hearts_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/greetTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_hearts" />

                <RelativeLayout
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/circle_frame"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/notificationIcon"
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/notification_icon"
                        app:srcCompat="@drawable/ic_group" />

                    <FrameLayout
                        android:layout_width="16dp"
                        android:layout_height="17dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/circle_frame_red">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/roboto_bold"
                            android:foregroundGravity="fill_horizontal"
                            android:gravity="center"
                            android:text="@string/notificationCount"
                            android:textColor="@color/white"
                            android:textSize="11sp"
                            tools:layout_editor_absoluteX="2dp"
                            tools:layout_editor_absoluteY="2dp" />

                    </FrameLayout>
                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/radius_50"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <EditText
                    android:id="@+id/searchBarEditTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="true"
                    android:background="#00000000"
                    android:drawableEnd="@drawable/ic_search"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/search_for_celebrants"
                    android:inputType="textCapWords"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_container">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerSlider2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/top_container"
                tools:layout_editor_absoluteX="0dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:layout_constraintVertical_weight="1"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="Upcoming Birthdays"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUpcomingEvents"
                android:layout_width="match_parent"
                android:layout_height="250dp" />
        </LinearLayout>

        <!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="320dp"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:paddingLeft="45dp"-->
<!--            android:paddingRight="45dp"-->
<!--            android:paddingTop="5dp"-->
<!--            android:paddingBottom="5dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/top_container">-->

<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:padding="20dp"-->
<!--                android:background="@drawable/vector">-->

<!--                <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                    android:id="@+id/edit_container"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="horizontal">-->

<!--                    <RelativeLayout-->
<!--                        android:id="@+id/relativeLayout4"-->
<!--                        android:layout_width="45dp"-->
<!--                        android:layout_height="45dp"-->
<!--                        android:layout_margin="@dimen/cardview_compat_inset_shadow"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintHorizontal_bias="1.0"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintTop_toTopOf="parent">-->

<!--                        <ImageView-->
<!--                            android:id="@+id/imageView4"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_centerInParent="true"-->
<!--                            android:gravity="center"-->
<!--                            android:src="@drawable/ic_edit_v2" />-->
<!--                    </RelativeLayout>-->


<!--                </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--                <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_centerInParent="true"-->
<!--                    android:layout_marginBottom="-128dp">-->

<!--                    <TextView-->
<!--                        android:id="@+id/textView"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:fontFamily="@font/montserrat_semibolditalic"-->
<!--                        android:text="It's Victors Birthday"-->
<!--                        android:textColor="#FFFFFF"-->
<!--                        android:textSize="18sp"-->
<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintStart_toStartOf="parent" />-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="279dp"-->
<!--                        android:layout_height="45dp"-->
<!--                        android:gravity="center"-->
<!--                        android:orientation="horizontal"-->
<!--                        app:layout_constraintBottom_toTopOf="@+id/textView"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintTop_toTopOf="parent">-->

<!--                        <ImageView-->
<!--                            android:id="@+id/imageView5"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="40dp"-->
<!--                            android:layout_marginTop="4dp"-->
<!--                            android:src="@drawable/ic_yaay" />-->

<!--                        <ImageView-->
<!--                            android:id="@+id/imageView6"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_marginBottom="4dp"-->
<!--                            android:layout_marginLeft="5dp"-->
<!--                            android:src="@drawable/ic_yaah_icon" />-->
<!--                    </LinearLayout>-->

<!--                </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--                <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                    android:id="@+id/quick_action_container"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentBottom="true"-->
<!--                    android:orientation="horizontal">-->

<!--                    <RelativeLayout-->
<!--                        android:id="@+id/relativeLayout"-->
<!--                        android:layout_width="45dp"-->
<!--                        android:layout_height="45dp"-->
<!--                        android:layout_margin="@dimen/cardview_compat_inset_shadow"-->
<!--                        android:background="@drawable/circle_frame_white"-->
<!--                        app:layout_constraintEnd_toStartOf="@+id/relativeLayout2"-->
<!--                        app:layout_constraintHorizontal_bias="0.5"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintTop_toTopOf="parent">-->

<!--                        <ImageView-->
<!--                            android:id="@+id/imageView"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_centerInParent="true"-->
<!--                            android:gravity="center"-->
<!--                            android:src="@drawable/ic_phone" />-->
<!--                    </RelativeLayout>-->

<!--                    <RelativeLayout-->
<!--                        android:id="@+id/relativeLayout2"-->
<!--                        android:layout_width="45dp"-->
<!--                        android:layout_height="45dp"-->
<!--                        android:background="@drawable/circle_frame_white"-->
<!--                        app:layout_constraintEnd_toStartOf="@+id/relativeLayout3"-->
<!--                        app:layout_constraintHorizontal_bias="0.5"-->
<!--                        app:layout_constraintStart_toEndOf="@+id/relativeLayout"-->
<!--                        app:layout_constraintTop_toTopOf="parent">-->

<!--                        <ImageView-->
<!--                            android:id="@+id/imageView2"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_centerInParent="true"-->
<!--                            android:gravity="center"-->
<!--                            android:src="@drawable/ic_mail" />-->
<!--                    </RelativeLayout>-->


<!--                    <RelativeLayout-->
<!--                        android:id="@+id/relativeLayout3"-->
<!--                        android:layout_width="45dp"-->
<!--                        android:layout_height="45dp"-->
<!--                        android:background="@drawable/circle_frame_white"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintHorizontal_bias="0.5"-->
<!--                        app:layout_constraintStart_toEndOf="@+id/relativeLayout2"-->
<!--                        app:layout_constraintTop_toTopOf="parent">-->

<!--                        <ImageView-->
<!--                            android:id="@+id/imageView3"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_centerInParent="true"-->
<!--                            android:gravity="center"-->
<!--                            android:src="@drawable/ic_share" />-->
<!--                    </RelativeLayout>-->


<!--                </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--            </RelativeLayout>-->

<!--        </LinearLayout>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>